package ua.khpi.oop.lab07.contracts;

public interface Notifiable {
    String sendNotification(String user);
}