package ua.khpi.oop.lab07.contracts;

public interface Schedulable {
    String schedule(String time);
}