@startuml
interface Notifiable {
  + sendNotification(user: String): String
}

interface Schedulable {
  + schedule(time: String): String
}

class ExamReminder {
  - subject: String
  + sendNotification(user: String): String
}

class RoomBooking {
  - roomNumber: String
  + schedule(time: String): String
}

class ConsultationSlot {
  - professorName: String
  - isScheduled: boolean
  + schedule(time: String): String
  + sendNotification(user: String): String
}

Notifiable <|.. ExamReminder
Schedulable <|.. RoomBooking
Notifiable <|.. ConsultationSlot
Schedulable <|.. ConsultationSlot
@enduml